use valueOf rather than constructor